syntax = "proto3";

package grpc.inventory.v1;

option go_package = "github.com/yehezkieldio/go-grpc-microservice-hashicorp/gen";

service Inventory {
    rpc GetInventory (InventoryRequest) returns (InventoryResponse) {}
}

message InventoryRequest {
    string item_id = 1;
}

message InventoryResponse {
    string item_id = 1;
    int32 quantity = 2;
}